posiGen_FullsendBox/src/objects/EE_Upgrade__c.object
<CustomObject>
    <fields>
        <fullName>Distribution_01_Jan_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_01_Jan_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 01 Jan Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_02_Feb_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_02_Feb_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 02 Feb Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_03_Mar_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_03_Mar_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 03 Mar Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_04_Apr_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_04_Apr_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 04 Apr Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_05_May_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_05_May_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 05 May Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_06_Jun_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_06_Jun_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 06 Jun Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_07_Jul_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_07_Jul_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 07 Jul Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_08_Aug_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_08_Aug_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 08 Aug Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_09_Sep_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_09_Sep_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 09 Sep Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_10_Oct_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_10_Oct_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 10 Oct Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_11_Nov_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_11_Nov_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 11 Nov Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_12_Dec_Pct__c</fullName>
        <formula>EU_Item_Type_Savings_Distribution__r.Distribution_12_Dec_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution 12 Dec Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EE_Upgrade_Item_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Populated by the monthly heroku job</description>
        <label>EE Upgrade Item Type</label>
        <referenceTo>EE_Upgrade_Item_Type__c</referenceTo>
        <relationshipLabel>EE Upgrade</relationshipLabel>
        <relationshipName>EE_Upgrade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EU_Item_Type_Savings_Distribution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Populated by the monthly heroku job</description>
        <label>EU Item Type Savings Distribution</label>
        <referenceTo>EU_Item_Type_Savings_Distribution__c</referenceTo>
        <relationshipLabel>EE Upgrade</relationshipLabel>
        <relationshipName>EE_Upgrade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Energy_Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Energy Audit</label>
        <referenceTo>Energy_Audit__c</referenceTo>
        <relationshipLabel>EE Upgrade Performed</relationshipLabel>
        <relationshipName>EE_Upgrade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <label>Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>PLACEHOLDER: Susco is awaiting details on this field being added and populated.</description>
        <inlineHelpText>PLACEHOLDER: Susco is awaiting details on this field being added and populated.</inlineHelpText>
        <label>Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EE Upgrade</label>
    <nameField>
        <displayFormat>EE-{00000000}</displayFormat>
        <label>EE Upgrade Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EE Upgrade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>